<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_open"
        android:title="@string/menu_open" />
    <item
        android:id="@+id/action_share"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/action_copy"
        android:title="@string/menu_copy" />
    <item
        android:id="@+id/action_move"
        android:title="@string/menu_move" />
    <item
        android:id="@+id/action_rename"
        android:title="@string/menu_rename" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_delete" />
    <item
        android:id="@+id/action_details"
        android:title="@string/menu_details" />
    <item
        android:id="@+id/action_favorite"
        android:title="@string/menu_favorite" />
</menu>