<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.beezlesoft.fileman.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/menu_sort_by"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sort_name"
                android:title="@string/menu_sort_name" />
            <item
                android:id="@+id/sort_size"
                android:title="@string/menu_sort_size" />
            <item
                android:id="@+id/sort_date"
                android:title="@string/menu_sort_date" />
        </menu>
    </item>
    <item
        android:id="@+id/action_home_nav"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_dashboard"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_paste"
        android:icon="@drawable/ic_paste"
        android:title="@string/menu_paste"
        app:showAsAction="ifRoom"
        android:visible="false" />
    <item
        android:id="@+id/action_new_folder"
        android:title="@string/menu_new_folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_home"
        android:title="@string/menu_internal_storage"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_app_private"
        android:title="@string/menu_app_private"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_system"
        android:title="@string/menu_system_files"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_root"
        android:title="@string/menu_system_root"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>