<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_copy"
        android:icon="@android:drawable/ic_menu_copy"
        android:title="@string/menu_copy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_move"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/menu_move"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />
</menu>